vlib/v/checker/tests/globals/assign_no_type.out
vlib/v/checker/tests/globals/assign_no_type.vv:1:21: error: global assign must have a type and value, use `__global ( name = type(value) )` or `__global ( name type )`
    1 | __global ( test = 0 )
      |                     ^
